# dfetch

./: .coderabbit.yaml  .gitignore  .gitpod.yml  .korbitignore  .mypy.ini  .plantwebrc  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  AGENTS.md  CHANGELOG.rst  LICENSE  README.md  SECURITY.md  action.yml  check_quality.bat  create_docs.bat  create_internal_docs.bat  create_venv.py  dfetch.code-workspace  dfetch.yaml  license_lookup.py  manifest.yaml  plan.md  pyoxidizer.bzl  pyproject.toml  requirements.txt  run_pylint.bat  setup.cfg  setup.py
.claude/: settings.json
.claude/commands/: dfetch-add.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/: dfetch-action.yml
.github/workflows/: .coderabbit.yaml  binaries.yml  build.yml  ci.yml  codeql-analysis.yml  dependabot-cyclonedx-hook.yml  dependency-review.yml  devcontainer.yml  docs.yml  landing-page.yml  python-publish.yml  release.yml  run.yml  scorecard.yml  source-provenance.yml  test.yml  windows.yml  winget-publish.yml
.gitpod/: Dockerfile
aur/: .SRCINFO  PKGBUILD
dfetch/: __init__.py  __main__.py  log.py  main.py
dfetch/commands/: __init__.py  add.py  check.py  command.py  common.py  diff.py  environment.py  filter.py  format_patch.py  freeze.py  import_.py  init.py  list.py  remove.py  replay_patches.py  report.py  review_patch.py  sbom.py  update.py  update_patch.py  validate.py
dfetch/manifest/: __init__.py  manifest.py  parse.py  project.py  remote.py  schema.py  validate.py  version.py
dfetch/project/: __init__.py  abstract_check_reporter.py  archivesubproject.py  fetcher.py  git.py  gitsubproject.py  gitsuperproject.py  metadata.py  subproject.py  superproject.py  svn.py  svnsubproject.py  svnsuperproject.py  vcs.py  version.py
dfetch/reporting/: __init__.py  jenkins_reporter.py  reporter.py  sbom_reporter.py  stdout_reporter.py
dfetch/resources/: __init__.py  schema.yaml  template.yaml
dfetch/terminal/: __init__.py  ansi.py  keys.py  pick.py  prompt.py  screen.py  tree_browser.py  types.py
dfetch/util/: __init__.py  cmdline.py  github_version_check.py  license.py  purl.py  ssh.py  terminal.py  util.py  versions.py  yaml.py
dfetch/vcs/: __init__.py  archive.py  cmake.py  git.py  git_types.py  integrity_hash.py  patch.py  svn.py
doc/: Makefile  adding-a-project.rst  alternatives.rst  api.rst  changelog.rst  check-ci.rst  cli_cheatsheet.rst  commands.rst  conf.py  contributing.rst  dfetch_cover.inc  dfetch_cover.tex  dfetch_preamble.inc  examples.rst  getting_started.rst  index.rst  installation.rst  internal.rst  landing.html  legal.rst  manifest.rst  manual.rst  migration.rst  patching.rst  robots.txt  sbom.rst  technical.rst  troubleshooting.rst  updating-projects.rst  usage.rst  vendoring.rst
doc/_ext/: colordot.py  designguide.py  dfetch_style.py  latex_tabs.py  pytm_directive.py  scenario_directive.py  sphinxcontrib_asciinema.patch  unique_section_ids.py
doc/_templates/: about.html
doc/appendix/: scenarios.rst
doc/asciicasts/: add.cast  basic.cast  check-ci.cast  check.cast  diff.cast  environment.cast  filter.cast  format-patch.cast  freeze.cast  import.cast  init.cast  interactive-add.cast  list.cast  remove.cast  replay-patches.cast  report.cast  review-patch.cast  sbom.cast  update-patch.cast  update.cast  validate.cast
doc/explanation/: alternatives.rst  architecture.rst  compliance_track.rst  control_register.rst  governance.rst  internal.rst  security.rst  (+5 more)
example/: dfetch.yaml  sarif.json
features/: add-project-through-cli.feature  check-archive.feature  check-child-projects.feature  check-git-repo.feature  check-report-code-climate.feature  check-report-jenkins.feature  check-report-sarif.feature  check-specific-projects.feature  check-svn-repo.feature  checked-project-has-dependencies.feature  diff-in-git.feature  diff-in-svn.feature  environment.feature  environment.py  fetch-archive.feature  fetch-checks-destination.feature  fetch-file-pattern-git.feature  fetch-file-pattern-svn.feature  fetch-force.feature  fetch-git-repo-with-submodule.feature  fetch-git-repo.feature  fetch-single-file-git.feature  fetch-single-file-svn.feature  fetch-specific-project.feature  fetch-svn-repo-with-external.feature  fetch-svn-repo-with-nonstd-external.feature  fetch-svn-repo.feature  fetch-with-ignore-git.feature  fetch-with-ignore-svn.feature  filter-projects.feature  format-patch-in-git.feature  format-patch-in-svn.feature  freeze-archive.feature  freeze-inplace.feature  freeze-projects.feature  freeze-specific-projects.feature  guard-against-overwriting-git.feature  guard-against-overwriting-svn.feature  guard-against-overwriting.feature  handle-invalid-metadata.feature  (+27 more)
script/: build.py  cast2gif.py  check_quality.bat  create_docs.bat  create_release_notes.py  create_sbom.py  create_venv.py  dependabot_hook.py  package.py  release.py
security/: README.md  __init__.py  compliance.py  compliance_data.py  compliance_types.py  cra_pren_4000014_oscal_catalog.json  dfetch.component-definition.json  report_template.md  report_template.rst  threat_model.py  threats.json  tm_common.py  tm_controls_data.py  tm_elements.py  tm_render.py  tm_supply_chain.py  tm_usage.py
tests/: __init__.py  conftest.py  manifest_mock.py  run_tests.bat  test_add.py  test_archive.py  test_check.py  test_check_reporters.py  test_check_stdout_reporter.py  test_cmake_import.py  test_cmdline.py  test_commands_common.py  test_commands_diff.py  test_commands_format_patch.py  test_commands_freeze.py  test_commands_misc.py  test_commands_update_patch.py  test_filter.py  test_fuzzing.py  test_fuzzing_parsers.py  test_git.py  test_git_submodules.py  test_git_vcs.py  test_github_version_check.py  test_gitsubproject.py  test_gitsuperproject.py  test_import.py  test_integrity.py  test_integrity_hash.py  test_jenkins_reporter.py  test_json_steps.py  test_license.py  test_list.py  test_manifest.py  test_metadata.py  test_metadata_nested.py  test_patch.py  test_project_entry.py  test_project_version.py  test_purl.py  (+26 more)
typings/: halo.pyi  patch_ng.pyi
(+115 files in other folders)
